2010-03-10  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Removed inexistant background file.

	* AUTHORS: Updated. Esteban was missing here.

	* install.php: Fixed several issues, added licence splash.

	* index.php: add check for enterprise load.

	* integria_dbdata.sql: Fixed problems with database IR.
	
	* integria_demo.sql: Fixed data (without create info) for use
	with current schema (IR/Innodb).

	* integria_db.sql: The same as above, more IR fixes.

2010-03-01  Sancho lerena <slerena@artica.es>

	* include/functions_form.php: Added combo for FR categories.

	* include/help/en/help_choose_download.php: basic context help about 
	location of download files.

	* include/functions.php: Added mimetype funcion.

	* operation/download/download.php: Function to "get" the file using
	a dump of contentfile in a new page.

	* operation/download/manage_cat.php: New code for FR category management.
	
	* operation/download/browse.php: New code for FR download view and manage.

	* integria_db.sql: Minor modifications in FR tables.

2010-02-20  Sancho lerena <slerena@artica.es>

	* parche.sql: Deleted old stuff, unused anymore.

	* integria_db.sql: Fixed the database integrial reference, all tables
	reviewed and fixed.

2010-02-17  Sancho Lerena <slerena@artica.es>

	* include/functions_calendar.php: Added a missing PHP function.

	* include/functions.php: Added error management to SMTP function.

	* install.php: Added support to load the demo database from install.

	* index.php: Enabled the development switch.

	* operation/kb/browse_data.php: added missing file.
	
	* integria_demo.sql: demo database for testing.

	* integria_db.sql: Fixed typo.

	* general/home.php: Removed unused link to project graph.

2010-02-16  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Small modifications.

	* include/integria_cron.php: Added check to get incident responses by mail.
	Modified most email calls to use templates.
	