@@ -22,9 +22,10 @@
 
 
 // Replace internal PHP function, not present in all PHP engines.
-
-function cal_days_in_month($month, $year) { 
-	return date('t', mktime(0, 0, 0, $month+1, 0, $year)); 
+if (!function_exists("cal_days_in_month")){
+	function cal_days_in_month($month, $year) { 
+		return date('t', mktime(0, 0, 0, $month+1, 0, $year)); 
+	}
 }
 
 /**
